--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-spring": "^9.7.2",
     "reactstrap": "^9.2.0",
+    "slick-carousel": "^1.8.1",
     "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.11",
     "tailwindcss": "^3.3.3",
